--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.swp
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
+SomeGameName/[Ll]ibrary/
+SomeGameName/[Tt]emp/
+SomeGameName/[Oo]bj/
+SomeGameName/[Bb]uild/
+SomeGameName/[Bb]uilds/
+SomeGameName/Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
 /.vs/
